@@ -1,4 +1,5 @@
 Dan Dennedy <dan@dennedy.org>
 Andreas Micklei <andreas.micklei@ivistar.de>
 Jason Howard <jason@spectsoft.com>
+Man page by Daniel Kobras <kobras@debian.org>
 
