@@ -12,8 +12,13 @@ can be controlled via AV/C. Eventually, the library will be expanded to
 implement more of the specification and to provide high level interfaces
 to various devices.
 
+2. Usage Information
+    The library comes with a console utility called dvcont that lets you
+send commands to the tape mechanism on your DV camcorder with IEEE-1394.
+There is a man page for it, so after installation 'man dvcont' for more
+information on how to use it.
 
-2. Copyleft
+3. Copyleft
 
 	libavc1394 itself is licensed under the Lesser General Public License
 (short LGPL, see file COPYING in the source distribution).  Other files in
@@ -22,7 +27,7 @@ libavc1394 are under their own licenses, as stated at the top of the individual
 files.
 
 
-3. API documentation
+4. API documentation
 
 	There is currently no external document describing the library
 functions, but you can find documentation for all functions in the header file
@@ -33,7 +38,7 @@ camcorder.  Both avc1394_vcr.c and test/dvcont.c are the best examples of how
 to use the libavc1394 interfaces.
 
 
-4. Maintainer
+5. Maintainer
 	Maintainer of libavc1394 is currently Dan Dennedy.  Send suggestions,
 bug reports and fixes to dan@dennedy.org.  See the file AUTHORS
 for a complete list of contributors to libavc1394.
@@ -43,5 +48,5 @@ http://sourceforge.net/projects/libavc1394 for more information.  You can
 also submit bugs through this page.
 
 
-2001-05-10  Dan Dennedy
+2001-08-15  Dan Dennedy
 
