@@ -157,6 +157,13 @@
 #define AVC1394_VCR_OPERAND_LOAD_MEDIUM_CLOSE_TRAY 0x32
 #define AVC1394_VCR_OPERAND_PLAY_NEXT_FRAME 0x30
 #define AVC1394_VCR_OPERAND_PLAY_SLOWEST_FORWARD 0x31
+#define AVC1394_VCR_OPERAND_PLAY_SLOW_FORWARD_6 0x32
+#define AVC1394_VCR_OPERAND_PLAY_SLOW_FORWARD_5 0x33
+#define AVC1394_VCR_OPERAND_PLAY_SLOW_FORWARD_4 0x34
+#define AVC1394_VCR_OPERAND_PLAY_SLOW_FORWARD_3 0x35
+#define AVC1394_VCR_OPERAND_PLAY_SLOW_FORWARD_2 0x36
+#define AVC1394_VCR_OPERAND_PLAY_SLOW_FORWARD_1 0x37
+#define AVC1394_VCR_OPERAND_PLAY_X1_FORWARD     0x38
 #define AVC1394_VCR_OPERAND_PLAY_FAST_FORWARD_1 0x39
 #define AVC1394_VCR_OPERAND_PLAY_FAST_FORWARD_2 0x3A
 #define AVC1394_VCR_OPERAND_PLAY_FAST_FORWARD_3 0x3B
@@ -166,6 +173,13 @@
 #define AVC1394_VCR_OPERAND_PLAY_FASTEST_FORWARD 0x3F
 #define AVC1394_VCR_OPERAND_PLAY_PREVIOUS_FRAME 0x40
 #define AVC1394_VCR_OPERAND_PLAY_SLOWEST_REVERSE 0x41
+#define AVC1394_VCR_OPERAND_PLAY_SLOW_REVERSE_6 0x42
+#define AVC1394_VCR_OPERAND_PLAY_SLOW_REVERSE_5 0x43
+#define AVC1394_VCR_OPERAND_PLAY_SLOW_REVERSE_4 0x44
+#define AVC1394_VCR_OPERAND_PLAY_SLOW_REVERSE_3 0x45
+#define AVC1394_VCR_OPERAND_PLAY_SLOW_REVERSE_2 0x46
+#define AVC1394_VCR_OPERAND_PLAY_SLOW_REVERSE_1 0x47
+#define AVC1394_VCR_OPERAND_PLAY_X1_REVERSE 0x48
 #define AVC1394_VCR_OPERAND_PLAY_FAST_REVERSE_1 0x49
 #define AVC1394_VCR_OPERAND_PLAY_FAST_REVERSE_2 0x4A
 #define AVC1394_VCR_OPERAND_PLAY_FAST_REVERSE_3 0x4B
@@ -173,6 +187,8 @@
 #define AVC1394_VCR_OPERAND_PLAY_FAST_REVERSE_5 0x4D
 #define AVC1394_VCR_OPERAND_PLAY_FAST_REVERSE_6 0x4E
 #define AVC1394_VCR_OPERAND_PLAY_FASTEST_REVERSE 0x4F
+#define AVC1394_VCR_OPERAND_PLAY_REVERSE 0x65
+#define AVC1394_VCR_OPERAND_PLAY_REVERSE_PAUSE 0x6D
 #define AVC1394_VCR_OPERAND_PLAY_FORWARD 0x75
 #define AVC1394_VCR_OPERAND_PLAY_FORWARD_PAUSE 0x7D
 #define AVC1394_VCR_OPERAND_RECORD_RECORD 0x75
@@ -205,6 +221,16 @@
 #define AVC1394_TUNER_COMMAND_DIRECT_SELECT_DATA 0xCB
 #define AVC1394_TUNER_COMMAND_CA_ENABLE 0xCC
 #define AVC1394_TUNER_COMMAND_AVC1394_TUNER_STATUS 0xCD
+
+enum avc1394_measurement_unit {
+    AVC1394_VCR_MEASUREMENT_VIDEO_FRAME = 0,
+    AVC1394_VCR_MEASUREMENT_VIDEO_SCENE,
+    AVC1394_VCR_MEASUREMENT_VISS,
+    AVC1394_VCR_MEASUREMENT_GOP,
+    AVC1394_VCR_MEASUREMENT_INDEX,
+    AVC1394_VCR_MEASUREMENT_SKIP,
+    AVC1394_VCR_MEASUREMENT_PHOTO
+};
 
 #ifdef __cplusplus
 extern "C" {
